test/files/neg/object-not-a-value.scala
object Test {
  import java.util._
  
  def main(args: Array[String]): Unit = {
    List(1) map (_ + 1)
  }
}
